# SOARcuit-shared-library

./: .gitignore  README.md  main.py  pyproject.toml  verify_models.py
.github/workflows/: ci.yml  publish.yml
shared/: __init__.py  errors.py  logging.py
shared/agents/: basic.py
shared/config/: config.py
shared/domain/: __init__.py  config.py  enums.py  identifiers.py  inference.py  meme.py  tracing.py  validation.py
shared/infrastructure/: embeddings.py  persistence.py  redis.py
shared/instrumentation/: __init__.py  costing.py  lifecycle.py  models.py  naming.py  profiler.py  repository.py
shared/llm/: __init__.py  agent.py  base.py  client.py  dispatcher.py  orchestrator.py  types.py
shared/llm/providers/: __init__.py  anthropic.py  gemini.py  openai.py
shared/llm/tools/: __init__.py  base.py  standard.py
shared/messaging/: __init__.py  envelope.py  errors.py  normalization.py  parser.py  pubsub.py  schemas.py  validation.py
shared/observability/: tracer.py
shared/registry/: __init__.py
shared/registry/agent_registry/: __init__.py  registry.py  starter_bench.py  tools.py  wiki_agent.py
shared/registry/model_registry/: __init__.py  registry.py
tests/: test_agent_logic.py  test_agents_basic.py  test_agents_extended.py  test_config.py  test_dispatcher.py  test_domain.py  test_domain_meme.py  test_domain_validation.py  test_instrumentation.py  test_llm.py  test_llm_client.py  test_logging.py  test_messaging.py  test_messaging_envelope.py  test_messaging_normalization.py  test_messaging_pubsub.py  test_messaging_validation.py  test_observability_tracer.py  test_orchestrator.py  test_providers.py  test_redis.py  test_registry.py  test_shared_app_settings.py  test_tools.py  test_tools_advanced.py
