[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soarcuit-shared"
version = "0.4.0"
description = "Shared canonical models and message parsing for SOARcuit services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudevents",
    "functions-framework",
    "google-cloud-pubsub>=2.37.0",
    "huggingface_hub[mcp]>=1.10.0",
    "marshmallow>=4.3.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "structlog-gcp>=0.5.0",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "google-genai>=1.73.1",
    "pydantic-ai-slim[google,anthropic,openai,mcp,duckduckgo]>=1.83",
    "openai>=2.32.0",
    "anthropic>=0.95.0",
    "regex>=2026.4.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["mypy", "pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[[tool.uv.index]]
name = "soarcuit-dev-python-repo"
url = "https://us-east4-python.pkg.dev/soarcuit/soarcuit-dev-python-repo/simple/"
publish-url = "https://us-east4-python.pkg.dev/soarcuit/soarcuit-dev-python-repo/"
explicit = true

[tool.mypy]
exclude = ["tests/"]
python_version = "3.14"
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "import-not-found"]
pretty = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["shared", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
